# Movil_Omnidireccional

./: README.md
MovilOmnidireccional_bringup/: CMakeLists.txt  package.xml
MovilOmnidireccional_bringup/launch/: omni_controller.launch.py  omni_test_gz.launch.xml
MovilOmnidireccional_bringup/rviz/: omni_control_rviz.rviz
MovilOmnidireccional_description/: CMakeLists.txt  package.xml
MovilOmnidireccional_description/config/: omni_velocity_controller.yaml
MovilOmnidireccional_description/launch/: omnidirectional_X3_display.xml  yahboomcar_X3_display.xml
MovilOmnidireccional_description/rviz/: yahboomcar_X3.rviz
MovilOmnidireccional_description/urdf/: camera.xacro  lidar.xacro  omnidirectional_X3.urdf  omnidirectional_X3_controler.xacro  omnidirectional_control.xacro  omnidirectional_gz_propierties.xacro  yahboomcar_X3.urdf  yahboomcar_controler.xacro
